tests/invalid/02_bad_array_size.ml
int main() {
    int32[3] a = [1, 2];
    return 0;
}
